--- a/.gitconfig
+++ b/.gitconfig
@@ -2,14 +2,14 @@
 	name = wate
 	email = pc.poisoning@gmail.com
 [core]
-    editor = vim
-    autocrlf = input
-    quotepath = False
-    excludesfile = ~/.gitignore_global
-    attributesfile = ~/.gitattributes
-    pager = delta
+	editor = vim
+	autocrlf = input
+	quotepath = False
+	excludesfile = ~/.gitignore_global
+	attributesfile = ~/.gitattributes
+	pager = delta
 [interactive]
-    diffFilter = delta --color-only
+	diffFilter = delta --color-only
 [fetch]
 	prune = true
 [pull]
@@ -18,15 +18,17 @@
 	default = simple
 	autoSetupRemote = true
 [filter "lfs"]
-    smudge = git-lfs smudge -- %f
-    process = git-lfs filter-process
-    required = true
-    clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
+	clean = git-lfs clean -- %f
 [delta]
-    #navigate = true
-    #light = false
-    line-numbers = true
-    side-by-side = true
+	#navigate = true
+	#light = false
+	line-numbers = true
+	side-by-side = true
+	hyperlinks = true
+	hyperlinks-file-link-format = "vscode://file/{path}:{line}"
 [alias]
 	au = add --update
 	aa = add --all
@@ -64,8 +66,8 @@
 	template = ~/.stCommitMsg
 [diff]
 	submodule = log
-    colorMoved = default
+	colorMoved = default
 [merge]
-    conflictstyle = diff3
+	conflictstyle = diff3
 [init]
 	defaultBranch = master
