--- a/.gitconfig
+++ b/.gitconfig
@@ -4,7 +4,6 @@
 [core]
 	editor = vim
 	autocrlf = input
-	quotepath = False
 	excludesfile = ~/.gitignore_global
 	attributesfile = ~/.gitattributes
 	pager = delta
@@ -14,6 +13,7 @@
 	prune = true
 [pull]
 	rebase = true
+	ff = only
 [push]
 	default = simple
 	autoSetupRemote = true
@@ -26,14 +26,13 @@
 	#navigate = true
 	#light = false
 	line-numbers = true
-	side-by-side = true
+	#side-by-side = true
 	hyperlinks = true
 	hyperlinks-file-link-format = "vscode://file/{path}:{line}"
 [alias]
 	au = add --update
 	aa = add --all
 	ap = add --patch
-	ai = add --interactive
 	br = branch
 	co = checkout
 	ci = commit
@@ -55,19 +54,11 @@
 	skipped-worktree = !git ls-files -v | grep ^s | cut -c 3-
 	delete-merged-remote-branches = !git branch -a --merged | grep -vE \"master|main|develop|staging|release\" | sed -e \"s% *remotes/origin/%%\" | xargs -I% git push origin :%
 	delete-merged-branches = !git branch --merged | grep -vE \"master|main|develop|staging|release\"  | xargs -I % git branch -d %
-	pr = "!pr() { git fetch origin pull/$1/head:pr_$1 ;}; pr"
-[difftool "sourcetree"]
-	cmd = /Applications/p4merge.app/Contents/MacOS/p4merge \"$LOCAL\" \"$REMOTE\"
-	path = 
-[mergetool "sourcetree"]
-	cmd = /Applications/p4merge.app/Contents/MacOS/p4merge \"$BASE\" \"$LOCAL\" \"$REMOTE\" \"$MERGED\"
-	trustExitCode = true
-[commit]
-	template = ~/.stCommitMsg
 [diff]
 	submodule = log
 	colorMoved = default
 [merge]
 	conflictstyle = diff3
+	ff = false
 [init]
 	defaultBranch = master
