--- a/.gitconfig
+++ b/.gitconfig
@@ -6,6 +6,7 @@
 	autocrlf = input
 	excludesfile = ~/.gitignore_global
 	attributesfile = ~/.gitattributes
+    quotepath = false
 	pager = delta
 [interactive]
 	diffFilter = delta --color-only
